--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "lint && mocha",
-    "lint": "eslint ./src",
-    "lintFix": "eslint ./src --fix",
+    "test": "mocha",
     "start": "node app.js"
   },
   "keywords": [],
@@ -14,13 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.3",
     "express": "^4.17.1",
     "mocha": "^6.1.4",
-    "nodemon": "^1.19.1",
     "sinon": "^7.3.2"
   }
 }
